logs/m3-report-generator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/m3_report_generator-2.1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/report_generator'...
Listing './lib/python3.5/site-packages/report_generator/api'...
Listing './lib/python3.5/site-packages/report_generator/core'...
Listing './lib/python3.5/site-packages/report_generator/query_builder'...
Compiling './lib/python3.5/site-packages/report_generator/query_builder/actions.py'...
***   File "./lib/python3.5/site-packages/report_generator/query_builder/actions.py", line 77
    except ReportGeneratorError, e:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/report_generator/query_builder/migrations'...
Compiling './lib/python3.5/site-packages/report_generator/query_builder/proxy.py'...
***   File "./lib/python3.5/site-packages/report_generator/query_builder/proxy.py", line 206
    print where_
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/report_generator/query_builder/templates'...
Listing './lib/python3.5/site-packages/report_generator/report_builder'...
Compiling './lib/python3.5/site-packages/report_generator/report_builder/actions.py'...
***   File "./lib/python3.5/site-packages/report_generator/report_builder/actions.py", line 355
    except (ReportException, ReportGeneratorError), msg:
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/report_generator/report_builder/builder.py'...
***   File "./lib/python3.5/site-packages/report_generator/report_builder/builder.py", line 74
    except EntityException, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/report_generator/report_builder/migrations'...
Listing './lib/python3.5/site-packages/report_generator/report_builder/templates'...
Listing './lib/python3.5/site-packages/report_generator/static'...
Listing './lib/python3.5/site-packages/report_generator/static/web'...
Listing './lib/python3.5/site-packages/report_generator/static/web/js'...
Listing './lib/python3.5/site-packages/report_generator/static/web/lehaUI'...
Listing './lib/python3.5/site-packages/report_generator/static/web/lehaUI/scripts'...
Listing './lib/python3.5/site-packages/report_generator/static/web/lehaUI/style'...
Listing './lib/python3.5/site-packages/report_generator/static/web/lehaUI/style/icons'...
Listing './lib/python3.5/site-packages/report_generator/static/web/lehaUI/style/theme'...
Listing './lib/python3.5/site-packages/report_generator/static/web/lehaUI/style/theme/images'...
Listing './lib/python3.5/site-packages/report_generator/templates'...
Listing './lib/python3.5/site-packages/report_generator/templates/js'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
